# kuro-roku

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: ARCHITECTURE.md  LIBRARY_PAGE_SPEC.md  ROADMAP.md  STYLING_GUIDE.md  UI_ARCHITECTURE.md
python/: README.md  pyproject.toml
python/kuro_ml/: __init__.py  embeddings.py  server.py  transcription.py  vlm.py
src/: App.module.css  App.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: fs.rs  mod.rs
src/components/: DetailsPanel.tsx  FileGrid.tsx  Sidebar.tsx
src/components/layout/: AppShell.tsx  Background.tsx  Header.tsx
src/components/tabs/: LibraryTab.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  shared.tsx
src/stores/: appStore.test.ts  appStore.ts  fileStore.ts  mockData.ts
src/styles/: App.css  design-system.css  index.css
ui_references/library_sketch/: App.tsx  README.md  index.html  metadata.json  package.json  types.ts
ui_references/library_sketch/components/: DetailsPanel.tsx
ui_references/library_sketch/components/Layout/: Background.tsx  Sidebar.tsx
ui_references/library_sketch/components/TreeMap/: TreeMap.tsx
ui_references/library_sketch/components/UI/: Components.tsx
