[project]
name = "kuro-ml"
version = "0.1.0"
description = "ML sidecar for Kuro-Roku file organization"
requires-python = ">=3.10"
dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    
    # ML (to be added when implementing)
    # "transformers>=4.50.0",
    # "torch>=2.0.0",
    # "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kuro_ml"]
