[package]
name = "kuro-roku"
version = "0.1.0"
description = "Local file organization tool with ML-powered video analysis"
authors = ["Enferlain"]
license = "MIT"
repository = "https://github.com/Enferlain/kuro-roku"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "kuro_roku_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"

# Database (SQLite)
rusqlite = { version = "0.35", features = ["bundled"] }

# Hashing (BLAKE3)
blake3 = "1.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# File system utilities  
walkdir = "2.5"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"
